--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
     <footer>
       <div class="container">
-        <p>&copy; 2024 Lớp 9/3. Tất cả quyền được bảo lưu.</p>
+        <p>&copy; 2025-2026 Lớp 9/3. Tất cả quyền được bảo lưu.</p>
         <p>Made with ❤️ by Lớp 9/3</p>
       </div>
     </footer>
@@ -232,3 +232,4 @@
     <script src="settings.js"></script>
   </body>
 </html>
+
